--- a/ZZZz/Untitled-2.ipynb
+++ b/ZZZz/Untitled-2.ipynb
@@ -96,9 +96,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-01-19 16:53:37,234 - INFO - Starting main...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Global] Using default dictionaries; no Excel override.\n",
+      "[main] No geometry_overrides.xlsx found; skipping...\n",
+      "[Global] Using default DHW lookup with no Excel override.\n",
+      "[Global] Using default epw_lookup (no Excel override).\n",
+      "[Global] Using default lighting_lookup (no Excel override).\n",
+      "[Global] Using default hvac_lookup (no Excel override).\n",
+      "[Global] Using default ventilation_lookup (no Excel override).\n",
+      "--- Creating IDF for building index 0 ---\n",
+      "[update_construction_materials] => Created fallback top-level constructions (CEILING1C, etc.).\n",
+      "[update_construction_materials] => Created sub-element-based constructions:\n",
+      "   ground_floor => ground_floor_Construction\n",
+      "   ground_floor_window => ground_floor_WindowConst\n",
+      "   exterior_wall => exterior_wall_Construction\n",
+      "   exterior_wall_window => exterior_wall_WindowConst\n",
+      "   flat_roof => flat_roof_Construction\n",
+      "   flat_roof_window => flat_roof_WindowConst\n",
+      "   inter_floor => inter_floor_Construction\n",
+      "   inter_floor_window => inter_floor_WindowConst\n",
+      "   interior_wall => interior_wall_Construction\n",
+      "   interior_wall_window => interior_wall_WindowConst\n",
+      "   windows => windows_Construction\n",
+      "   windows_window => windows_WindowConst\n",
+      "   doors => doors_Construction\n",
+      "   doors_window => doors_WindowConst\n",
+      "[assign_constructions_to_surfaces] => Surfaces assigned via sub-element logic.\n",
+      "[add_fenestration] Building: 4136730 => WWR=0.220, used Window1C\n",
+      "ZoneList 'ALL_ZONES' created with zones: ['Zone1', 'Zone2', 'Zone3']\n",
+      "[DHW] building_id=4136730, dhw_key=Detached House\n",
+      "     occupant_count=1 daily_liters=45.0\n",
+      "     setpoint=59.5C, tank_volume=0.278 m³\n",
+      "     schedules => MyDHW_0_UseFraction, MyDHW_0_Setpoint\n",
+      "     WATERHEATER => MyDHW_0_WaterHeater, fuel=Electricity, eff=0.9\n",
+      "[add_HVAC_Ideal_to_all_zones] Completed HVAC setup for building 4136730.\n",
+      "[VENT OVERRIDES] bldg=4136730, infiltration_base=1.2278853596915769, year_factor=0.9050021510445334, sys=A, f_ctrl=0.9223210738148823, fanP=0.0, hrv_eff=0.0, infiltration_sched=AlwaysOnSched, vent_sched=VentSched_DayNight\n",
+      "[VENTILATION] Building 4136730, system=A, infiltration=0.002 m3/s, vent=0.035 m3/s, #zones=3\n",
+      "   => Created infiltration for Zone1: 0.0007 m3/s, ventilation: 0.0117 m3/s\n",
+      "   => Created infiltration for Zone2: 0.0007 m3/s, ventilation: 0.0117 m3/s\n",
+      "   => Created infiltration for Zone3: 0.0007 m3/s, ventilation: 0.0117 m3/s\n",
+      "[GROUND TEMPS] Created SITE:GROUNDTEMPERATURE:BUILDINGSURFACE with monthly values: {'January': 2.6394267984578836, 'February': 3.5375161328340003, 'March': 4.550058636738239, 'April': 7.558026845372057, 'May': 14.472942428328025, 'June': 16.176699487422912, 'July': 18.78435913540969, 'August': 17.673877665258832, 'September': 14.84384363937054, 'October': 9.059594438876141, 'November': 6.65591392441081, 'December': 4.0107105762067246}\n",
+      "[create_idf_for_building] IDF saved at: output/output_IDFs\\building_0.idf\n",
+      "--- Creating IDF for building index 1 ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-01-19 16:53:39,280 - INFO - [simulate_all] Starting...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[update_construction_materials] => Created fallback top-level constructions (CEILING1C, etc.).\n",
+      "[update_construction_materials] => Created sub-element-based constructions:\n",
+      "   ground_floor => ground_floor_Construction\n",
+      "   ground_floor_window => ground_floor_WindowConst\n",
+      "   exterior_wall => exterior_wall_Construction\n",
+      "   exterior_wall_window => exterior_wall_WindowConst\n",
+      "   flat_roof => flat_roof_Construction\n",
+      "   flat_roof_window => flat_roof_WindowConst\n",
+      "   inter_floor => inter_floor_Construction\n",
+      "   inter_floor_window => inter_floor_WindowConst\n",
+      "   interior_wall => interior_wall_Construction\n",
+      "   interior_wall_window => interior_wall_WindowConst\n",
+      "   windows => windows_Construction\n",
+      "   windows_window => windows_WindowConst\n",
+      "   doors => doors_Construction\n",
+      "   doors_window => doors_WindowConst\n",
+      "[assign_constructions_to_surfaces] => Surfaces assigned via sub-element logic.\n",
+      "[add_fenestration] Building: 4136732 => WWR=0.232, used Window1C\n",
+      "ZoneList 'ALL_ZONES' created with zones: ['Zone1_FrontPerimeter', 'Zone1_RightPerimeter', 'Zone1_RearPerimeter', 'Zone1_LeftPerimeter', 'Zone1_Core', 'Zone2_FrontPerimeter', 'Zone2_RightPerimeter', 'Zone2_RearPerimeter', 'Zone2_LeftPerimeter', 'Zone2_Core']\n",
+      "[DHW] building_id=4136732, dhw_key=Detached House\n",
+      "     occupant_count=2 daily_liters=90.0\n",
+      "     setpoint=59.5C, tank_volume=0.278 m³\n",
+      "     schedules => MyDHW_1_UseFraction, MyDHW_1_Setpoint\n",
+      "     WATERHEATER => MyDHW_1_WaterHeater, fuel=Electricity, eff=0.9\n",
+      "[add_HVAC_Ideal_to_all_zones] Completed HVAC setup for building 4136732.\n",
+      "[VENT OVERRIDES] bldg=4136732, infiltration_base=0.6278853596915768, year_factor=0.9050021510445334, sys=D, f_ctrl=0.7723210738148822, fanP=0.0, hrv_eff=0.7736471214164012, infiltration_sched=AlwaysOnSched, vent_sched=VentSched_DayNight\n",
+      "[VENTILATION] Building 4136732, system=D, infiltration=0.004 m3/s, vent=0.093 m3/s, #zones=10\n",
+      "   => Created infiltration for Zone1_FrontPerimeter: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "   => Created infiltration for Zone1_RightPerimeter: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "   => Created infiltration for Zone1_RearPerimeter: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "   => Created infiltration for Zone1_LeftPerimeter: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "   => Created infiltration for Zone1_Core: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "   => Created infiltration for Zone2_FrontPerimeter: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "   => Created infiltration for Zone2_RightPerimeter: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "   => Created infiltration for Zone2_RearPerimeter: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "   => Created infiltration for Zone2_LeftPerimeter: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "   => Created infiltration for Zone2_Core: 0.0004 m3/s, ventilation: 0.0093 m3/s\n",
+      "      -> Zone1_FrontPerimeter IdealLoads has HRV = 0.77\n",
+      "      -> Zone1_RightPerimeter IdealLoads has HRV = 0.77\n",
+      "      -> Zone1_RearPerimeter IdealLoads has HRV = 0.77\n",
+      "      -> Zone1_LeftPerimeter IdealLoads has HRV = 0.77\n",
+      "      -> Zone1_Core IdealLoads has HRV = 0.77\n",
+      "      -> Zone2_FrontPerimeter IdealLoads has HRV = 0.77\n",
+      "      -> Zone2_RightPerimeter IdealLoads has HRV = 0.77\n",
+      "      -> Zone2_RearPerimeter IdealLoads has HRV = 0.77\n",
+      "      -> Zone2_LeftPerimeter IdealLoads has HRV = 0.77\n",
+      "      -> Zone2_Core IdealLoads has HRV = 0.77\n",
+      "[GROUND TEMPS] Created SITE:GROUNDTEMPERATURE:BUILDINGSURFACE with monthly values: {'January': 2.6394267984578836, 'February': 3.5375161328340003, 'March': 4.550058636738239, 'April': 7.558026845372057, 'May': 14.472942428328025, 'June': 16.176699487422912, 'July': 18.78435913540969, 'August': 17.673877665258832, 'September': 14.84384363937054, 'October': 9.059594438876141, 'November': 6.65591392441081, 'December': 4.0107105762067246}\n",
+      "[create_idf_for_building] IDF saved at: output/output_IDFs\\building_1.idf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-01-19 16:53:39,281 - INFO - [simulate_all] Found 2 tasks. Using 4 workers.\n",
+      "2025-01-19 16:53:45,576 - INFO - [simulate_all] All simulations complete.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[merge_all_results] Reading output/Sim_Results\\2020.0\\simulation_bldg0.csv, Building 0\n",
+      "[merge_all_results] Reading output/Sim_Results\\2020.0\\simulation_bldg1.csv, Building 1\n",
+      "[merge_all_results] Successfully wrote merged CSV to output/results/merged_as_is.csv\n",
+      "[merge_all_results] Reading output/Sim_Results\\2020.0\\simulation_bldg0.csv, Building 0\n",
+      "[merge_all_results] Reading output/Sim_Results\\2020.0\\simulation_bldg1.csv, Building 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-01-19 16:53:48,238 - INFO - All done with main.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[merge_all_results] Successfully wrote merged CSV to output/results/merged_daily_mean.csv\n",
+      "    ogc_fid                         object_name                   param_name  \\\n",
+      "0   4136730                              LIGHTS                   lights_wm2   \n",
+      "1   4136730                   ELECTRICEQUIPMENT                parasitic_wm2   \n",
+      "2   4136730                     LIGHTS_SCHEDULE                           tD   \n",
+      "3   4136730                     LIGHTS_SCHEDULE                           tN   \n",
+      "4   4136730             LIGHTS.Fraction_Radiant      lights_fraction_radiant   \n",
+      "5   4136730             LIGHTS.Fraction_Visible      lights_fraction_visible   \n",
+      "6   4136730         LIGHTS.Fraction_Replaceable  lights_fraction_replaceable   \n",
+      "7   4136730  ELECTRICEQUIPMENT.Fraction_Radiant       equip_fraction_radiant   \n",
+      "8   4136730     ELECTRICEQUIPMENT.Fraction_Lost          equip_fraction_lost   \n",
+      "9   4136732                              LIGHTS                   lights_wm2   \n",
+      "10  4136732                   ELECTRICEQUIPMENT                parasitic_wm2   \n",
+      "11  4136732                     LIGHTS_SCHEDULE                           tD   \n",
+      "12  4136732                     LIGHTS_SCHEDULE                           tN   \n",
+      "13  4136732             LIGHTS.Fraction_Radiant      lights_fraction_radiant   \n",
+      "14  4136732             LIGHTS.Fraction_Visible      lights_fraction_visible   \n",
+      "15  4136732         LIGHTS.Fraction_Replaceable  lights_fraction_replaceable   \n",
+      "16  4136732  ELECTRICEQUIPMENT.Fraction_Radiant       equip_fraction_radiant   \n",
+      "17  4136732     ELECTRICEQUIPMENT.Fraction_Lost          equip_fraction_lost   \n",
+      "\n",
+      "    assigned_value   min_val   max_val  \n",
+      "0           10.000    10.000    10.000  \n",
+      "1            0.285     0.285     0.285  \n",
+      "2         2000.000  2000.000  2000.000  \n",
+      "3          300.000   300.000   300.000  \n",
+      "4            0.700     0.700     0.700  \n",
+      "5            0.200     0.200     0.200  \n",
+      "6            1.000     1.000     1.000  \n",
+      "7            0.000     0.000     0.000  \n",
+      "8            1.000     1.000     1.000  \n",
+      "9           10.000    10.000    10.000  \n",
+      "10           0.285     0.285     0.285  \n",
+      "11        2000.000  2000.000  2000.000  \n",
+      "12         300.000   300.000   300.000  \n",
+      "13           0.700     0.700     0.700  \n",
+      "14           0.200     0.200     0.200  \n",
+      "15           1.000     1.000     1.000  \n",
+      "16           0.000     0.000     0.000  \n",
+      "17           1.000     1.000     1.000  \n",
+      "[main] Wrote final fenestration/material picks to output/assigned/assigned_fenez_params.csv\n",
+      "[main] Wrote final HVAC picks to assigned_hvac_params.csv\n",
+      "   ogc_fid                                           epw_path\n",
+      "0  4136730  C:/Users/aminj/OneDrive/Desktop/EnergyPlus/Wea...\n",
+      "1  4136732  C:/Users/aminj/OneDrive/Desktop/EnergyPlus/Wea...\n",
+      "        month  temp_value\n",
+      "0     January    2.639427\n",
+      "1    February    3.537516\n",
+      "2       March    4.550059\n",
+      "3       April    7.558027\n",
+      "4         May   14.472942\n",
+      "5        June   16.176699\n",
+      "6        July   18.784359\n",
+      "7      August   17.673878\n",
+      "8   September   14.843844\n",
+      "9     October    9.059594\n",
+      "10   November    6.655914\n",
+      "11   December    4.010711\n",
+      "    ogc_fid                      param_name      assigned_value\n",
+      "0   4136730         cooling_supply_air_temp           14.139427\n",
+      "1   4136730         heating_supply_air_temp           48.100043\n",
+      "2   4136730           cooling_supply_air_hr            0.008775\n",
+      "3   4136730           heating_supply_air_hr            0.003723\n",
+      "4   4136730  cooling_design_air_flow_method  DesignDayWithLimit\n",
+      "5   4136730  heating_design_air_flow_method           DesignDay\n",
+      "6   4136732         cooling_supply_air_temp           13.278854\n",
+      "7   4136732         heating_supply_air_temp           40.125054\n",
+      "8   4136732           cooling_supply_air_hr            0.009275\n",
+      "9   4136732           heating_supply_air_hr            0.004223\n",
+      "10  4136732  cooling_design_air_flow_method           DesignDay\n",
+      "11  4136732  heating_design_air_flow_method           DesignDay\n"
+     ]
+    }
+   ],
    "source": [
     "# main.py\n",
     "import os\n",
