--- a/ZZZz/report_values.ipynb
+++ b/ZZZz/report_values.ipynb
@@ -307,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All .py and .csv files from 'D:\\Documents\\E_Plus_2030_py\\cal' have been exported to 'output.txt', excluding folders: ['_pycache_', 'aiaia', 'calibration', 'ZZZz', 'shading', 'output'].\n"
+      "All .py and .csv files from 'D:\\Documents\\E_Plus_2030_py\\idf_objects\\ventilation' have been exported to 'output.txt', excluding folders: ['_pycache_', 'aiaia', 'calibration', 'ZZZz', 'shading', 'output'].\n"
      ]
     }
    ],
@@ -375,7 +375,7 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    # Example usage:\n",
-    "    base_dir = r\"D:\\Documents\\E_Plus_2030_py\\cal\"  # idf_objects\\\n",
+    "    base_dir = r\"D:\\Documents\\E_Plus_2030_py\\idf_objects\\ventilation\"  # idf_objects\\\n",
     "    output_txt = \"output.txt\"\n",
     "    # Add any directories you'd like to exclude here\n",
     "    exclude_list = [\"_pycache_\", \"aiaia\", \"calibration\", \"ZZZz\", \"shading\", \"output\"]\n",
