feb final upates

--- a/ZZZz/report_values.ipynb
+++ b/ZZZz/report_values.ipynb
@@ -15841,14 +15841,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined file created: combined_files.txt\n"
+      "Combined file created: D:\\Documents\\E_Plus_2030_py\\ZZZz\\combined_files.txt\n"
      ]
     }
    ],
@@ -15877,7 +15877,7 @@
     "    # File that contains the list of paths (one per line) in the given format\n",
     "    list_file = \"file_paths.txt\"\n",
     "    # Output file where combined content will be saved\n",
-    "    output_file = \"combined_files.txt\"\n",
+    "    output_file = \"D:\\Documents\\E_Plus_2030_py\\ZZZz\\combined_files.txt\"\n",
     "    \n",
     "    combine_files_from_list(list_file, output_file)\n",
     "    print(f\"Combined file created: {output_file}\")\n"
@@ -15885,18 +15885,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from database_handler import load_buildings_from_db\n",
+    "import sys\n",
+    "import os\n",
     "\n",
-    "df_test = load_buildings_from_db(\n",
-    "    filter_criteria={\"postcodes\": [\"1011AB\"]},\n",
-    "    filter_by=\"postcodes\"\n",
+    "# Path to the directory containing 'check_files.py'\n",
+    "sys.path.append(r\"D:\\Documents\\E_Plus_2030_py\\ZZZz\")\n",
+    "\n",
+    "from check_files import check_number_of_columns_and_extract, check_number_of_rows_and_extract\n",
+    "\n",
+    "# Check columns\n",
+    "check_number_of_columns_and_extract(\n",
+    "    file_list_path=r\"D:\\Documents\\E_Plus_2030_py\\ZZZz\\file_list.txt\", \n",
+    "    expected_columns=5, \n",
+    "    output_txt_path=r\"D:\\Documents\\E_Plus_2030_py\\ZZZz\\c_columns_report.txt\"\n",
     ")\n",
-    "print(df_test.head())\n"
+    "\n",
+    "# Check rows\n",
+    "check_number_of_rows_and_extract(\n",
+    "    file_list_path=r\"D:\\Documents\\E_Plus_2030_py\\ZZZz\\file_list.txt\", \n",
+    "    expected_rows=5, \n",
+    "    output_txt_path=r\"D:\\Documents\\E_Plus_2030_py\\ZZZz\\c_rows_report.txt\"\n",
+    ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
