--- a/ZZZz/rrrrr eport_values.ipynb
+++ b/ZZZz/rrrrr eport_values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -508,6 +508,105 @@
     "        print(\"\\nNo data was processed due to an error or no data returned from the function.\")\n",
     "    print(\"--- Script End ---\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting to extract unique values from column 'building_type' in files:\n",
+      "- D:\\Documents\\E_Plus_2030_py\\lookup_pys\\envelop_nonres6.xlsx\n",
+      "- D:\\Documents\\E_Plus_2030_py\\lookup_pys\\envelop_res6.xlsx\n",
+      "------------------------------\n",
+      "\n",
+      "Unique building types found:\n",
+      "- Accommodation Function\n",
+      "- Apartment\n",
+      "- Cell Function\n",
+      "- Corner House\n",
+      "- Detached House\n",
+      "- Education Function\n",
+      "- Healthcare Function\n",
+      "- Industrial Function\n",
+      "- Meeting Function\n",
+      "- Office Function\n",
+      "- Other Use Function\n",
+      "- Retail Function\n",
+      "- Sport Function\n",
+      "- Terrace or Semi-detached House\n",
+      "- Two-and-a-half-story House\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def get_unique_building_types(file_paths, column_name=\"building_type\"):\n",
+    "    \"\"\"\n",
+    "    Extracts unique values from a specified column in multiple Excel files.\n",
+    "\n",
+    "    Args:\n",
+    "        file_paths (list): A list of strings, where each string is the path to an Excel file.\n",
+    "        column_name (str): The header name of the column to extract unique values from.\n",
+    "\n",
+    "    Returns:\n",
+    "        set: A set containing all unique values from the specified column\n",
+    "             across all provided files. Returns an empty set if an error occurs\n",
+    "             or the column is not found.\n",
+    "    \"\"\"\n",
+    "    unique_values = set()\n",
+    "\n",
+    "    for file_path in file_paths:\n",
+    "        try:\n",
+    "            # Read the Excel file\n",
+    "            # The engine='openpyxl' is specified for .xlsx files\n",
+    "            df = pd.read_excel(file_path, engine='openpyxl')\n",
+    "\n",
+    "            # Check if the column exists in the DataFrame\n",
+    "            if column_name in df.columns:\n",
+    "                # Add unique values from the column to the set\n",
+    "                # .dropna() is used to remove any NaN (Not a Number) values\n",
+    "                # which can occur if some cells in the column are empty.\n",
+    "                unique_values.update(df[column_name].dropna().unique())\n",
+    "            else:\n",
+    "                print(f\"Warning: Column '{column_name}' not found in file: {file_path}\")\n",
+    "\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Error: File not found at path: {file_path}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred while processing file {file_path}: {e}\")\n",
+    "\n",
+    "    return unique_values\n",
+    "\n",
+    "# --- Main execution ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Define the paths to your Excel files\n",
+    "    # IMPORTANT: Replace these with the actual paths to your files if they are different.\n",
+    "    # Using raw strings (r\"...\") for Windows paths to handle backslashes correctly.\n",
+    "    file1_path = r\"D:\\Documents\\E_Plus_2030_py\\lookup_pys\\envelop_nonres6.xlsx\"\n",
+    "    file2_path = r\"D:\\Documents\\E_Plus_2030_py\\lookup_pys\\envelop_res6.xlsx\"\n",
+    "\n",
+    "    files_to_process = [file1_path, file2_path]\n",
+    "    target_column = \"building_type\"\n",
+    "\n",
+    "    print(f\"Attempting to extract unique values from column '{target_column}' in files:\")\n",
+    "    for f_path in files_to_process:\n",
+    "        print(f\"- {f_path}\")\n",
+    "    print(\"-\" * 30)\n",
+    "\n",
+    "    unique_building_types = get_unique_building_types(files_to_process, target_column)\n",
+    "\n",
+    "    if unique_building_types:\n",
+    "        print(\"\\nUnique building types found:\")\n",
+    "        for b_type in sorted(list(unique_building_types)): # Sorted for consistent output\n",
+    "            print(f\"- {b_type}\")\n",
+    "    else:\n",
+    "        print(\"\\nNo unique building types found or an error occurred.\")\n"
    ]
   }
  ],
