docs: update ventilation section for flow area

--- a/idf_objects/ventilation/vent.tex
+++ b/idf_objects/ventilation/vent.tex
@@ -6,9 +6,9 @@ We also incorporate corrections for year of construction or renovation, which NT
 
 Once infiltration is determined, we calculate the required ventilation flow, in alignment with the relevant sections of NTA 8800 describing minimum outdoor airflow rates. Our code checks whether the building_function is residential or non_residential. For residential cases, we rely on an approximate base flow of 0.9 dm³/s per square meter of floor area, as an interpretation consistent with certain typical references in building codes. Then we apply a user-defined f_ctrl_val, typically corresponding to a system control factor. Multiplying the base flow by f_ctrl_val yields the final design flow, after which we ensure a minimum of around 126 m³/h, reflecting a typical lower limit for dwellings. Finally, this value is converted from m³/h to m³/s. For non_residential buildings, we map usage types such as office_area_based, childcare, or retail to typical design flows in dm³/s per m², again multiplied by f_ctrl_val. This approach matches the logic described in NTA 8800 for establishing design flows for different usage functions, though in simplified numeric form.
 
-The pipeline next distributes infiltration and ventilation flows among all zones in the model. If a building has multiple EnergyPlus zones, we compute infiltration_m³_s_total and vent_flow_m³_s_total and then divide by the number of zones. This is consistent with the assumption that each zone receives a proportional share of infiltration and ventilation unless more specific geometry or infiltration data are available.
+The pipeline next distributes infiltration and ventilation flows among all zones in the model. If a building has multiple EnergyPlus zones, we compute *infiltration_m³_s_total* and *vent_flow_m³_s_total* and then allocate these totals proportional to each zone's floor area (falling back to an equal split when areas are unavailable). This ensures every zone receives a representative share of the whole-building flows.
 
-Once infiltration and ventilation flows are allocated, we generate or modify EnergyPlus objects. For infiltration, we create ZONEINFILTRATION:DESIGNFLOWRATE objects, setting the Design_Flow_Rate to infiltration_m³_s for each zone. This ensures infiltration is present in the simulation at the designated level. For ventilation, our system can create either a ZONEVENTILATION:DESIGNFLOWRATE object (for systems A, B, C) or modify a ZONEHVAC:IDEALLOADSAIRSYSTEM object (for system D). The underlying system classification (A, B, C, D) matches the categories enumerated by NTA 8800, namely Natural (A), Mechanical Supply with Natural Exhaust (B), Natural Supply with Mechanical Exhaust (C), or Balanced Mechanical with HRV (D).
+Once infiltration and ventilation flows are allocated, we generate or modify EnergyPlus objects. For infiltration, we create ``ZONEINFILTRATION:DESIGNFLOWRATE`` objects and use the ``Flow/Area`` calculation method, setting ``Design_Flow_Rate`` to the infiltration rate per square metre (m³/s · m²) for each zone. For ventilation, our system can create a ``ZONEVENTILATION:DESIGNFLOWRATE`` object (for systems A–C) or modify a ``ZONEHVAC:IDEALLOADSAIRSYSTEM`` object (for system D). The underlying system classification (A, B, C, D) matches the categories enumerated by NTA 8800: Natural (A), Mechanical Supply with Natural Exhaust (B), Natural Supply with Mechanical Exhaust (C), or Balanced Mechanical with HRV (D).
 
 When we encounter system D, we ensure there is an existing IdealLoads air system created for that zone. In NTA 8800, balanced mechanical ventilation with heat recovery typically implies certain heat exchange efficiencies. Therefore, if an hrv_eff parameter is computed or assigned by the user, we set that as the Sensible_Heat_Recovery_Effectiveness on the IdealLoads system. In code, we typically name this object “ZoneName Ideal Loads,” then set ideal_obj.Sensible_Heat_Recovery_Effectiveness = hrv_eff if it exists. This final step ensures that when the simulation runs, the zone is modeled with a sensible heat recovery capability matching the user’s or scenario’s assigned infiltration and ventilation overrides.
 
